# simplex

./: .gitignore  Cargo.toml  README.md
simplex/: Cargo.toml
simplex/src/: main.rs
suplex/: Cargo.toml
suplex/src/: lib.rs  plex_device.rs  plex_library.rs  plex_server.rs  plex_user.rs  util.rs
xml_struct/: Cargo.toml
xml_struct/src/: lib.rs
xml_struct_derive/: Cargo.toml
xml_struct_derive/src/: lib.rs
