[package]
name = "simplex"
version = "0.1.0"
edition = "2021"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
iced = {version = "0.4", features=["pure", "tokio"]}
serde = {version = "1", features=["derive"]}
serde_json = "1"
suplex = {path = "../suplex"}
tokio = {version = "1", features = ["full"]}

xml_struct = {path = "../xml_struct"}
xml_struct_derive = {path = "../xml_struct_derive"}