[package]
name = "suplex"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
quick-xml = {version = "0.25", features=["serialize"]}
reqwest = {version = "0.11"}
serde = {version = "1", features=["derive"]}
serde-xml-rs = "0.6"
tokio = {version = "1"}
thiserror = "1.0"
