[package]
name = "suplex"
version = "0.1.0"
edition = "2021"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
quick-xml = {version = "0.25", features=["serialize"]}
reqwest = {version = "0.11"}
serde = {version = "1", features=["derive"]}
serde-xml-rs = "0.6"
tokio = {version = "1"}
thiserror = "1.0"
regex = "1.6.0"
lazy_static = "1.4.0"

xml_struct = {path = "../xml_struct"}
xml_struct_derive = {path = "../xml_struct_derive"}